--- a/src/pages/Landing/Landing.scss
+++ b/src/pages/Landing/Landing.scss
@@ -15,7 +15,7 @@
   z-index: 100;
 }
 
-.bg-purple{
+.bg-purple {
   background: ($Purple-1-rgba);
   padding: 5px;
   border-radius: 100px;
@@ -24,13 +24,27 @@
 .clip-path-2 {
   width: 100%;
   height: 100%;
-  clip-path: polygon(33% 0, 100% 0, 100% 37%, 33% 19%);
+  clip-path: polygon(33% 0, 100% 0, 100% 37%, 33% 13%);
   background: $Purple-1;
   background: -webkit-linear-gradient(to left, $Purple-1, $Purple-2, $Purple-3);
   background: linear-gradient(to left, $Purple-1, $Purple-2, $Purple-3);
   position: absolute;
   z-index: 100;
   left: 500;
+}
+
+.cards-container {
+  width: 100%;
+  display: flex;
+  z-index: 200;
+  align-items: center;
+  justify-content: space-aroud;
+  position: relative;
+  top: -40px;
+  background-color: #7cb7dfc4;
+  padding: 10px;
+  border-radius: 10px;
+  font-family: $RobotoFont;
 }
 
 .margen {
@@ -54,7 +68,7 @@ img {
   background-color: $White;
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: 120vh;
   width: 100%;
 }
 
