--- a/src/pages/Landing/Landing.scss
+++ b/src/pages/Landing/Landing.scss
@@ -1,35 +1,38 @@
 @import '../../assets/styles/_var.scss';
 
-* {
-  font-family: $RobotoFont;
+.section__container {
+  position: relative;
+  z-index: 10;
+  display: flex;
+  flex-direction: column;
+  background-color: #ffff;
+  overflow: hidden;
+  height: 100vh;
+  width: 100vw;
 }
 
-.clip-path {
-  width: 50%;
-  height: 100%;
+.section__container::before {
+  display: block;
+  content: '';
   clip-path: polygon(0 60%, 0 100%, 51% 100%);
-  background: $Orange-1;
   background: -webkit-linear-gradient(to right, $Orange-2, $Orange-1);
   background: linear-gradient(to right, $Orange-2, $Orange-1);
   position: absolute;
+  bottom: 0;
+  width: 500px;
+  height: 500px;
 }
 
-.clip-path-2 {
-  width: 100%;
-  height: 100%;
-  clip-path: polygon(33% 0, 100% 0, 100% 37%, 33% 13%);
-  background: $Purple-1;
+.section__container::after {
+  display: block;
+  content: '';
+  clip-path: polygon(50% 0, 100% 0, 100% 70%, 50% 13%);
   background: -webkit-linear-gradient(to left, $Purple-1, $Purple-2, $Purple-3);
   background: linear-gradient(to left, $Purple-1, $Purple-2, $Purple-3);
   position: absolute;
-}
-
-.div__landing-container {
-  display: flex;
-  flex-direction: column;
-  background-color: $White;
-  height: 100vh;
-  width: 100vw;
+  z-index: 5;
+  width: 100%;
+  height: 100%;
 }
 
 .section__about {
@@ -38,38 +41,62 @@
   justify-content: center;
   height: 100vh;
   width: 100%;
-
-  input {
-    display: block;
-    padding: 20px 20px;
-    border-radius: 30px;
-    outline: none;
-    border: none;
-    width: 30%;
-    margin-top: 30px;
-  }
 }
 
-i {
-  background: $Orange-2;
-  background: -webkit-linear-gradient(to left, $Orange-2, $Orange-1);
-  background: linear-gradient(to left, $Orange-2, $Orange-1);
-  color: $White;
-  border-radius: 50%;
-  padding: 10px;
-}
-
-img {
-  width: 20%;
-}
-
-.section__cards-container {
+.div__principal {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
-  border: 1px solid #7cb7dfc4;
-  font-family: $RobotoFont;
-  padding: 10px;
-  border-radius: 10px;
-  width: 50%;
+  height: 100%;
+
+  div {
+    h2 {
+      span {
+        background: -webkit-linear-gradient(yellow, red);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        color: tomato;
+      }
+    }
+
+    h3 {
+      color: rgba(173, 173, 173, 0.986);
+    }
+
+    form {
+      display: flex;
+      align-content: center;
+      box-shadow: 10px 16px 31px -2px rgba(0, 0, 0, 0.1);
+      border-radius: 30px;
+
+      input {
+        display: block;
+        padding: 20px 20px;
+        background-color: white;
+        outline: none;
+        border: none;
+        width: 90%;
+      }
+
+      button {
+        cursor: pointer;
+        border: none;
+        background-color: transparent;
+      }
+
+      i {
+        background: -webkit-linear-gradient(to left, $Orange-2, $Orange-1);
+        background: linear-gradient(to left, $Orange-2, $Orange-1);
+        color: $White;
+        border-radius: 50%;
+        padding: 10px;
+      }
+    }
+  }
+
+  .sgv__principal {
+    position: relative;
+    z-index: 10;
+    width: 50vw;
+  }
 }
