--- a/src/pages/Landing/Landing.scss
+++ b/src/pages/Landing/Landing.scss
@@ -47,7 +47,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
+  z-index: 20;
   height: 100%;
+  padding: 0 20px;
 
   div {
     h2 {
@@ -98,5 +101,41 @@
     position: relative;
     z-index: 10;
     width: 50vw;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .section__container::after {
+    clip-path: polygon(0 0, 100% 0, 100% 50%, 0 13%);
+    background: -webkit-linear-gradient(
+      to left,
+      $Purple-1,
+      $Purple-2,
+      $Purple-3
+    );
+    background: linear-gradient(to left, $Purple-1, $Purple-2, $Purple-3);
+    position: absolute;
+    z-index: 5;
+    width: 100%;
+    height: 100%;
+  }
+
+  .div__principal {
+    flex-direction: column;
+
+    div {
+      h3,
+      h2 {
+        text-align: center;
+      }
+
+      form {
+        background-color: white;
+      }
+    }
+
+    .sgv__principal {
+      display: none;
+    }
   }
 }
