--- a/src/pages/Login/login.scss
+++ b/src/pages/Login/login.scss
@@ -38,11 +38,11 @@ $placeholderColor: #d6d6d6;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: center;
     background-color: white;
     border-top-left-radius: $formBorder;
     border-top-right-radius: $formBorder;
-    min-height: 70%;
+    min-height: 400px;
     width: 100vw;
 
     label {
