--- a/src/pages/User/Dashboard/dashboard.scss
+++ b/src/pages/User/Dashboard/dashboard.scss
@@ -1,19 +1,79 @@
 .section__dashboard {
-    display: flex;
-    background-color: #fafafa;
-    height: 100%;
+  display: flex;
+  height: 100%;
+  background-color: royalblue;
 
+  aside {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 8vw;
+
+    a {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      color: white;
+      margin: 20px 0;
+      font-size: 1.5em;
+
+      span {
+        display: none;
+      }
+    }
+
+    .a-active {
+      color: #000;
+      background-color: white;
+      padding: 1em;
+      border-radius: 0.5em;
+      position: relative;
+      left: 40px;
+      font-size: 1em;
+
+      span {
+        display: block;
+      }
+    }
+  }
+
+  div {
+    background-color: #fafafa;
+    border-radius: 40px 0 0 40px;
+    height: 100%;
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .section__dashboard {
+    flex-direction: column-reverse;
 
     aside {
-        display: flex;
-        flex-direction: column;
-        background-color: red;
-        width: 10vw;
+      display: flex;
+      justify-content: space-around;
+      flex-direction: row;
+      min-height: 8vh;
+      width: 100%;
+      border-radius: 40px 40px 0 0;
+
+      .a-active {
+        padding: 1em;
+        border-radius: 0.5em;
+        position: relative;
+        left: 0;
+        bottom: 20px;
+        font-size: 1em;
+
+        span {
+          display: block;
+        }
+      }
     }
 
     div {
-        background-color: rosybrown;
-        height: 100%;
-        width: 100%;
+      border-radius: 0;
     }
+  }
 }
