--- a/src/pages/User/Dashboard/dashboard.scss
+++ b/src/pages/User/Dashboard/dashboard.scss
@@ -38,7 +38,7 @@
     }
   }
 
-  div {
+  .div__child {
     background-color: #fafafa;
     border-radius: 40px 0 0 40px;
     height: 100%;
@@ -72,7 +72,7 @@
       }
     }
 
-    div {
+    .div__child {
       border-radius: 0;
     }
   }
