--- a/src/pages/Login/login.scss
+++ b/src/pages/Login/login.scss
@@ -58,6 +58,7 @@ $placeholderColor: #d6d6d6;
       border-bottom: 2px solid #d6d6d6;
       margin-bottom: 3em;
       height: 3em;
+      outline: none;
       width: 90%;
     }
 
