--- a/src/pages/About/About.scss
+++ b/src/pages/About/About.scss
@@ -63,9 +63,10 @@ hr{
 
 /******************** CARD CONTAINER *******************/
 .cards___container{
-  width: 90%;
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
   margin-right: 10px;
+  margin-top: 50px;
 }
