--- a/src/pages/About/About.scss
+++ b/src/pages/About/About.scss
@@ -6,10 +6,11 @@ hr{
 
 .about___container {
   width: 100%;
-  height: 90vh;
+  height: 86vh;
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 20px;
 }
 
 .about___title {
@@ -30,8 +31,8 @@ hr{
 }
 
 .paragraph {
-  width: 55%;
-  text-align: justify;
+  width: 90%;
+  text-align: center;
   line-height: 18px;
   font-size: 16px;
 }
@@ -68,5 +69,5 @@ hr{
   flex-wrap: wrap;
   justify-content: space-evenly;
   margin-right: 10px;
-  margin-top: 50px;
+  margin-top: 60px;
 }
