--- a/src/pages/Register/Register.scss
+++ b/src/pages/Register/Register.scss
@@ -4,18 +4,18 @@ $placeholderColor: rgb(41, 43, 44);
 .register___container {
   display: flex;
   justify-content: space-between;
-  background-image: url("../../assets/img/Login_bg.jpg");
+  background-image: url('../../assets/img/Login_bg.jpg');
   background-size: cover;
   height: 100%;
   width: 100%;
 
   .text-container {
-    width: 45%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100%;
+    width: 45%;
   }
 
   .text-container p,
@@ -73,3 +73,33 @@ $placeholderColor: rgb(41, 43, 44);
   }
 }
 
+@media screen and (max-width: 500px) {
+  .register___container {
+    flex-direction: column;
+
+    .text-container {
+      width: 92%;
+      height: 40%;
+    }
+
+    form {
+      height: 58%;
+      width: 87%;
+
+      a {
+        width: 60%;
+        padding: 15px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 300px) {
+  .register___container {
+    form {
+      input {
+        width: 80%;
+      }
+    }
+  }
+}
