--- a/src/pages/User/Dashboard/dashboard.scss
+++ b/src/pages/User/Dashboard/dashboard.scss
@@ -4,10 +4,17 @@
   background-color: royalblue;
 
   aside {
+    margin: auto 0;
+  }
+
+  aside ul {
+    list-style: none;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    padding: 0;
+    margin: 0;
     width: 8vw;
 
     a {
@@ -29,7 +36,7 @@
       padding: 1em;
       border-radius: 0.5em;
       position: relative;
-      left: 40px;
+      left: 30px;
       font-size: 1em;
 
       span {
@@ -46,15 +53,15 @@
   }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 768px) {
   .section__dashboard {
     flex-direction: column-reverse;
 
-    aside {
+    aside ul {
       display: flex;
       justify-content: space-around;
       flex-direction: row;
-      min-height: 8vh;
+      min-height: 5vh;
       width: 100%;
       border-radius: 40px 40px 0 0;
 
