--- a/src/pages/Landing/Landing.scss
+++ b/src/pages/Landing/Landing.scss
@@ -1,4 +1,5 @@
 @import '../../assets/styles/_var.scss';
+@import '../../assets/styles/_input.scss';
 
 .section__container {
   position: relative;
@@ -64,36 +65,6 @@
 
     h3 {
       color: rgba(173, 173, 173, 0.986);
-    }
-
-    form {
-      display: flex;
-      align-content: center;
-      box-shadow: 10px 16px 31px -2px rgba(0, 0, 0, 0.1);
-      border-radius: 30px;
-
-      input {
-        display: block;
-        padding: 20px 20px;
-        background-color: white;
-        outline: none;
-        border: none;
-        width: 90%;
-      }
-
-      button {
-        cursor: pointer;
-        border: none;
-        background-color: transparent;
-      }
-
-      i {
-        background: -webkit-linear-gradient(to left, $Orange-2, $Orange-1);
-        background: linear-gradient(to left, $Orange-2, $Orange-1);
-        color: $White;
-        border-radius: 50%;
-        padding: 10px;
-      }
     }
   }
 
