--- a/src/pages/User/Dashboard/dashboard.scss
+++ b/src/pages/User/Dashboard/dashboard.scss
@@ -5,17 +5,19 @@
 
   aside {
     margin: auto 0;
+    border-radius: 3em;
   }
 
   aside ul {
     list-style: none;
     display: flex;
+    border-radius: 3em;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     padding: 0;
     margin: 0;
-    width: 8vw;
+    width: 5vw;
 
     a {
       display: flex;
@@ -46,6 +48,7 @@
   }
 
   .div__child {
+    overflow: hidden;
     background-color: #fafafa;
     border-radius: 40px 0 0 40px;
     height: 100%;
@@ -56,14 +59,16 @@
 @media screen and (max-width: 768px) {
   .section__dashboard {
     flex-direction: column-reverse;
+    background-color: transparent;
 
     aside ul {
       display: flex;
       justify-content: space-around;
       flex-direction: row;
+      border-radius: 40px 40px 0 0;
+      background-color: royalblue;
       min-height: 5vh;
       width: 100%;
-      border-radius: 40px 40px 0 0;
 
       .a-active {
         padding: 1em;
@@ -72,6 +77,7 @@
         left: 0;
         bottom: 20px;
         font-size: 1em;
+        margin: 0;
 
         span {
           display: block;
